--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.13.2",
-    "lucide-react": "0.344.0",
-    "qrcode.react": "3.1.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-router-dom": "6.22.3",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-query-devtools": "^5.91.2",
+    "axios": "^1.13.2",
     "canvas-confetti": "1.9.2",
     "js-cookie": "^3.0.5",
+    "lucide-react": "0.344.0",
+    "qrcode.react": "3.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-lazy-load-image-component": "^1.6.3",
+    "react-router-dom": "6.22.3",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
