--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^1.13.2",
     "canvas-confetti": "1.9.2",
+    "html5-qrcode": "^2.3.8",
     "js-cookie": "^3.0.5",
     "lucide-react": "0.344.0",
     "qrcode.react": "3.1.0",
